--- a/index.html
+++ b/index.html
@@ -248,14 +248,14 @@
                         <div class="col-md-4 wow fadeInLeft">
                         	<img src="images/misc/pic_1.png" class="img-responsive" alt="">
                         	<div class="spacer-single"></div>
-                            <h3><span class="id-color">AMOBLAMIENTOS</span> COMERCIALES</h3>
+                            <h3><span class="id-color">EQUIPAMENTOS</span> COMERCIALES</h3>
                             Nunca quisiste pasar tanto tiempo en tu negocio! Nuestras vitrinas, estanterías y bajo/alto mesadas son de diseños minimalistas y clásicos sin perder lo funcional. Combinan con todo y son de muy alta durabilidad.   
                         </div>
 
                         <div class="col-md-4 wow fadeInUp" data-wow-delay=".2s">
                         	<img src="images/misc/pic_2.png" class="img-responsive" alt="">
                         	<div class="spacer-single"></div>
-                            <h3><span class="id-color">GÓNDOLAS</span> Y CAJONERAS</h3>
+                            <h3><span class="id-color">CORTADORAS</span> DE FIAMBRES</h3>
                             Los las líneas simples y de alta calidad de nuestras mesas y vajilleros combinan diseño y utilidad, logrando una “cómoda perfección”. Estos muebles son los que estas buscando para completar tu comedor.
                         </div>
 
@@ -284,9 +284,9 @@
                         <div class="col-md-10 col-md-offset-1">
                             <div class="de_tab tab_steps row">
                                 <ul class="de_nav">
-                                    <li class="active wow fadeIn col-md-3 col-sm-3 col-xs-6" data-wow-delay="0s" ><span>VISITA Y<br>RELEVAMIENTO</span><div class="v-border"></div>
+                                    <li class="active wow fadeIn col-md-3 col-sm-3 col-xs-6" data-wow-delay="0s" ><span>EQUIPOS<br>INDUSTRIALES</span><div class="v-border"></div>
                                     </li>
-                                    <li class="wow fadeIn col-md-3 col-sm-3 col-xs-6" data-wow-delay=".4s"><span>DISEÑO Y<br>SELECCIÓN</span><div class="v-border"></div>
+                                    <li class="wow fadeIn col-md-3 col-sm-3 col-xs-6" data-wow-delay=".4s"><span>DISEÑO<br>PERSONALIZADO</span><div class="v-border"></div>
                                     </li>
                                     <li class="wow fadeIn col-md-3 col-sm-3 col-xs-6" data-wow-delay=".8s"><span>FABRICACIÓN</span><div class="v-border"></div>
                                     </li>
