--- a/project-details-mesa2.html
+++ b/project-details-mesa2.html
@@ -6,80 +6,28 @@
     <div class="row">
         <div class="col-md-8 project-images">
             <img src="images/portfolio/view/p6_a.jpg" alt="" class="img-responsive" />
-            <img src="images/portfolio/view/p6_b.jpg" alt="" class="img-responsive" />
-            <img src="images/portfolio/view/p6_c.jpg" alt="" class="img-responsive" />
         </div>
         <div class="col-md-4">
             <div class="project-info">
-                <h2>Mesa Sasha</h2>
+                <h2>Tostadoras con plancha</h2>
 
                 <div class="details">
                     <div class="info-text">
                         <span class="title">Producto</span>
-                        <span class="val">Mesa</span>
+                        <span class="val">Tostadora con plancha</span>
                     </div>
 
                     <div class="info-text">
                         <span class="title">Tipo</span>
-                        <span class="val">Tapa y bases</span>
+                        <span class="val">Industrial</span>
                     </div>
 
                     <div class="info-text">
                         <span class="title">Modelo</span>
-                        <span class="val">Sasha</span>
+                        <span class="val">Nacional</span>
                     </div>
                     <br>
-                    <div class="info-text">
-                        <span class="title">Concepto – Bases de Diseño</span>
-                        <span class="val"><br>
-                        Gama media.<br>
-                        Diseño lineal. Formas limpias.<br>
-                        Imagen robusta doble perfil.<br>
-                        Tapas superior y bases en T
-                        </span>
-                    </div>
-                </div>
-
-                <p class="row">
-                    <h4>Elemento</h4>
-                    <div class="info-text">
-                        <span class="title col-md-4">Tapa</span>
-                        <span class="val col-md-8">Melamina MDF 18 mm - Textura</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Bases</span>
-                        <span class="val col-md-8">Melamina MDF 18 mm – Textura. Regatón regulable</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Refuerzos</span>
-                        <span class="val col-md-8">Melamina MDF 18 mm - Textura</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Cantos</span>
-                        <span class="val col-md-8">PVC 36 mm</span>
-                    </div>
-                </p>
-
-                <p class="row">
-                    <h4>Dimensiones Std</h4>
-                    <div class="info-text">
-                        <span class="title col-md-4">Altura</span>
-                        <span class="val col-md-8">750</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Anchos</span>
-                        <span class="val col-md-8">600; 800; 1000</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Largos</span>
-                        <span class="val col-md-8">1000; 1200; 1500; 1800; 2000</span>
-                    </div>
-                </p>
+                   
                         
             </div>
         </div>
