--- a/project-details-placards.html
+++ b/project-details-placards.html
@@ -5,16 +5,16 @@
 
     <div class="row">
         <div class="col-md-8 project-images">
-            <img src="images/portfolio/view/p7_a.jpg" alt="" class="img-responsive" />
+            <img src="images/portfolio/view/p8_p.jpg" alt="" class="img-responsive" />
         </div>
         <div class="col-md-4">
             <div class="project-info">
-                <h2>Tostadora doble</h2>
+                <h2>Heladeras a medida</h2>
 
                 <div class="details">
                     <div class="info-text">
                         <span class="title">Producto</span>
-                        <span class="val">Tostadora doble</span>
+                        <span class="val">Heladeras para carnicerías</span>
                     </div>
 
                     <div class="info-text">
@@ -24,7 +24,7 @@
 
                     <div class="info-text">
                         <span class="title">Modelo</span>
-                        <span class="val">Nacional</span>
+                        <span class="val">Fabricación en nuestros talleres</span>
                     </div>
                     <br>
                     
