--- a/project-details-sasha.html
+++ b/project-details-sasha.html
@@ -10,12 +10,12 @@
         </div>
         <div class="col-md-4">
             <div class="project-info">
-                <h2>Batidoras y mezcladoras/h2>
+                <h2>Moledoras/h2>
 
                 <div class="details">
                     <div class="info-text">
                         <span class="title">Producto</span>
-                        <span class="val">Batidoras y mezcladoras</span>
+                        <span class="val">Moledoras</span>
                     </div>
 
                     <div class="info-text">
