--- a/project-details-alena.html
+++ b/project-details-alena.html
@@ -10,12 +10,12 @@
         </div>
         <div class="col-md-4">
             <div class="project-info">
-                <h2>Máquinas Comerciales</h2>
+                <h2>Freidoras</h2>
 
                 <div class="details">
                     <div class="info-text">
                         <span class="title">Producto</span>
-                        <span class="val">Freidoras</span>
+                        <span class="val">Freidora</span>
                     </div>
 
                     <div class="info-text">
@@ -27,7 +27,7 @@
                         <span class="title">Concepto de equipos</span>
                         <span class="val"><br>
                         Gama media alta.<br>
-                        Herrajes gama alta. Cierres suaves.<br>
+                        Herrajes gama alta. cubeta hermética con bordes suaves.<br>
                         Diseño lineal. Formas limpias.<br>
             \
                        (95)
@@ -37,8 +37,8 @@
 
           
                     <div class="info-text">
-                        <span class="title col-md-4">Refuerzos</span>
-                        <span class="val col-md-8">Melamina MDF 18 mm - Blanco</span>
+                        <span class="title col-md-4">Drenaje</span>
+                        <span class="val col-md-8">fácil de limpiar</span>
                     </div>
 
          
