--- a/project-details-mesa1.html
+++ b/project-details-mesa1.html
@@ -9,12 +9,12 @@
         </div>
         <div class="col-md-4">
             <div class="project-info">
-                <h2>Tostadoras</h2>
+                <h2>Batidoras Industriales</h2>
 
                 <div class="details">
                     <div class="info-text">
                         <span class="title">Producto</span>
-                        <span class="val">Tostadoras con plancha</span>
+                        <span class="val">Batidoras y sobadoras</span>
                     </div>
 
                    
