--- a/project-details-vajilleros.html
+++ b/project-details-vajilleros.html
@@ -6,141 +6,29 @@
     <div class="row">
         <div class="col-md-8 project-images">
             <img src="images/portfolio/view/p4_a.jpg" alt="" class="img-responsive" />
-            <img src="images/portfolio/view/p4_b.jpg" alt="" class="img-responsive" />
-            <img src="images/portfolio/view/p4_c.jpg" alt="" class="img-responsive" />
+ \
         </div>
         <div class="col-md-4">
             <div class="project-info">
-                <h2>Vajillero Sasha</h2>
+                <h2>Licuadoras para bares</h2>
 
                 <div class="details">
                     <div class="info-text">
                         <span class="title">Producto</span>
-                        <span class="val">Vajillero</span>
+                        <span class="val">Licuadoras para bares</span>
                     </div>
 
                     <div class="info-text">
                         <span class="title">Tipo</span>
-                        <span class="val">Modular sobre bastidor</span>
+                        <span class="val">Metálicas y plásticas</span>
                     </div>
 
                     <div class="info-text">
                         <span class="title">Modelo</span>
-                        <span class="val">Sasha</span>
+                        <span class="val">Con Jarra de vidrio o plásticas</span>
                     </div>
                     <br>
-                    <div class="info-text">
-                        <span class="title">Concepto – Bases de Diseño</span>
-                        <span class="val"><br>
-                        Gama media alta.<br>
-                        Herrajes gama alta. Cierres suaves.<br>
-                        Diseño lineal. Formas limpias.<br>
-                        Imagen robusta doble perfil.<br>
-                        Tapas laterales y superior.<br>
-                        Prioridad a los cajones.<br>
-                        Puertas batientes.
-                        </span>
-                    </div>
-                </div>
-
-                <p class="row">
-                    <h4>Gabinete</h4>
-                    <div class="info-text">
-                        <span class="title col-md-4">Laterales</span>
-                        <span class="val col-md-8">Melamina MDF 18 mm - Textura</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Bases</span>
-                        <span class="val col-md-8">Melamina MDF 18 mm - Textura</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Refuerzos</span>
-                        <span class="val col-md-8">Melamina MDF 18 mm - Textura</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Fondos</span>
-                        <span class="val col-md-8">Fibroplus 3 mm - Blanco</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Cantos</span>
-                        <span class="val col-md-8">PVC Blancos</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Zócalos</span>
-                        <span class="val col-md-8">Bastidor 80 mm.<br>Regatón regulable</span>
-                    </div>
-                </p>
-
-                <p class="row">
-                    <h4>Puertas y Frentes</h4>
-                    <div class="info-text">
-                        <span class="title col-md-4">Puertas</span>
-                        <span class="val col-md-8">Melamina textura veta horizontal, MDF, 18 mm</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Frentes</span>
-                        <span class="val col-md-8">Melamina textura MDF – 18 mm</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Cantos</span>
-                        <span class="val col-md-8">PVC. Maquinado y manual.</span>
-                    </div>
-                </p>
-
-                <p class="row">
-                    <h4>Herrajes</h4>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Bisagras puertas batientes</span>
-                        <span class="val col-md-8">Cierre suave integrado<br>&nbsp;</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Bisagras puertas abatibles</span>
-                        <span class="val col-md-8">Bisagras libres y pistón a gas. Cierre suave por aportiguador</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Correderas</span>
-                        <span class="val col-md-8">Ocultas inferiores. Crudo y melamina MDF</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Manija</span>
-                        <span class="val col-md-8">Barral metálico pulido horizontal. Atornillado</span>
-                    </div>
-                </p>
-
-                <p class="row">
-                    <h4>Dimensiones Std</h4>
-                    <div class="info-text">
-                        <span class="title col-md-4">Altura bajos</span>
-                        <span class="val col-md-8">900</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Anchos puertas</span>
-                        <span class="val col-md-8">400; 500</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Anchos cajoneras</span>
-                        <span class="val col-md-8">400; 500; 600; 800; 900</span>
-                    </div>
-
-                    <div class="info-text">
-                        <span class="title col-md-4">Despeje al piso</span>
-                        <span class="val col-md-8">80 +regaton regulable</span>
-                    </div>
-                </p>
-                        
+                    
             </div>
         </div>
     </div>
