email con info@bianchilatina.com

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<div class="col social">
 										<a href="https://www.facebook.com/bianchilatina" target="_blank"><i class="fa fa-facebook"></i></a>
 										<a href="https://twitter.com/bianchilatina" target="_blank"><i class="fa fa-twitter"></i></a>
-										<a href="mailto:bianchilatina@hotmail.com"><i class="fa fa-envelope-o"></i></a>
+										<a href="mailto:info@bianchilatina.com"><i class="fa fa-envelope-o"></i></a>
 
 									</div>
 		              <!-- social icons close -->
@@ -557,7 +557,7 @@
                                     <span><strong>Celular:</strong><a href="tel:+5493863432655">03863-154326551</a></span>
                                     <span><strong>Celular2:</strong><a href="tel:+5493863419700">03863-15419700</a></span>
                                     <span><strong>Dirección:</strong>Las Piedras 361 <br>Monteros(4142) TUCUMÁN</span>
-                                    <span><strong>Email: </strong><a href="mailto:bianchilatina@hotmail.com">bianchilatina@hotmail.com</a></span>
+                                    <span><strong>Email: </strong><a href="mailto:bianchilatina@hotmail.com">info@bianchilatina.com</a></span>
 
                                 </address>
                             </div>
@@ -576,7 +576,7 @@
                                 <div class="social-icons">
                                     <a href="https://www.facebook.com/bianchilatina" target="_blank"><i class="fa fa-facebook"></i></a>
 									<a href="https://twitter.com/bianchilatina" target="_blank"><i class="fa fa-twitter"></i></a>
-									<a href="mailto:bianchilatina@hotmail.com "><i class="fa fa-envelope-o"></i></a>
+									<a href="mailto:info@bianchilatina.com "><i class="fa fa-envelope-o"></i></a>
                                 </div>
                             </div>
                         </div>
